#138: Correct login-page alignment
The padding (unneeded) was driving the width to overflow.

--- a/includes/templates/YOUR_TEMPLATE/css/login.css
+++ b/includes/templates/YOUR_TEMPLATE/css/login.css
@@ -1,6 +1,5 @@
 .opc-block-2 { width: 50%; float: left; }
 .opc-block-3 { width: 33.33%; float: left; }
-.opc-block { padding: 10px; }
 .opc-block > div, .opc-block > label { padding: 7px; }
 .opc-block hr { width: 95%; }
 .opc-head { font-size: larger; font-weight: bold; }
